Se agregaron métodos en el controlador para gestionar las rutas de promoción, pago, envío y usuario.

--- a/pom.xml
+++ b/pom.xml
@@ -21,21 +21,28 @@
             <version>5.6.1</version>
         </dependency>
 
-        <!-- Gson (opcional, si usas para otras cosas) -->
+        <!-- Gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
 
-        <!-- Jackson Databind para manejo JSON -->
+        <!-- Jackson Databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>
         </dependency>
 
-        <!-- Logger para ver logs -->
+        <!-- Jackson Datatype JSR310 para soporte de Java 8 Date/Time API -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
+        <!-- Logger -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
